--- a/дз паспорт.html
+++ b/дз паспорт.html
@@ -4,61 +4,94 @@
         <meta charset="UTF-8">
         <title>дз паспорт Мартиросян</title> 
         <style type="text/css">
-        body {
-            background-image: url(passpotr_shablon.png);
-            background-position: top left;
-            background-repeat: no-repeat;
-            
-        }
         .block1 {
-            margin-left: 90px;
-            margin-top: 65px;
+            margin-left: 117px;
+            margin-top: -75px;
             font: bold 100% serif;
         }
         .block2 {
-            margin-left: 85px;
-            margin-top: 50px;
+            margin-left: 120px;
+            margin-top: 60px;
             font: 12pt serif;
         }
         .block3 {
-            margin-left: 250px ;
+            margin-left: 290px ;
             margin-top: -20px;
         }
         .block4 {
-            margin-left: 200px ;
-            margin-top: 188px;
+            margin-left: 220px ;
+            margin-top: 210px;
         }
         .block5 {
-            margin-left: 170px ;
-            margin-top: 25px;
+            margin-left: 210px ;
+            margin-top: 35px;
         }
         .block6 {
-            margin-left:185px ;
+            margin-left:220px ;
             margin-top:7px ;
         }
         .block7 {
-            margin-left: 170px;
+            margin-left: 210px;
             margin-top: 5px ;
         }
         .block8 {
-            margin-left: 250px;
+            margin-left: 300px;
             margin-top: -20px;
         }
         .block9 {
-            margin-left: 190px;
-            margin-top: 5px;
+            margin-left: 230px;
+            margin-top: 10px;
         }
         .photo {
-            margin-left: 20px;
-            margin-top: -100px;
+            margin-left: 40px;
+            margin-top: -120px;
         }
         .block10 {
             margin-left: 20px;
             margin-top: 80px;
         }
+        .dom{
+            margin-left: 500px;
+            margin-top: -550px;
+        }
+        .p1{
+            font-family: 'Mont';
+            font-size:20px;
+            margin-top: -740px;
+            margin-left: 27px;
+            font-style: bold;
+        }
+        .p2{
+            font-family: 'Mont';
+            font-size:20px;
+            margin-top: 100px;
+            margin-left: 600px;
+        }
+        .knopka{
+            margin-left: 60px;
+        }
     </style>
+    <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
+        <header class="primary-header flex">
+            <div>
+                <img src="https://cdn.worldvectorlogo.com/logos/cartier-1.svg" width="35">
+            </div>
+        
+            <nav>
+                <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
+                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2 " href="web.html"><span aria-hidden="true">00</span>Главная</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2 " href="coll.html"><span aria-hidden="true">01</span>Коллекции</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2 " href="me.html"><b><span aria-hidden="true">02</span>Контактная информация</b></a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2 " href="igra.html"><span aria-hidden="true">03</span>Игры</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2 " href="form.html"><span aria-hidden="true">04</span>Обратная связь</a>
+            </ul>
+            </nav>
+         </header>
+        <div class="pasport"><img src="passpotr_shablon.png" width="500"></div>
+        <p class="p1">Паспорт. Изменяем кириллицу на латиницу</p>
+        <p class="p2">Считываем информацию из DOM</p>
         <div class="block1"> УМВД России по Хабаровскому краю </div>
         <div class="block2"> 21.01.2019 </div>
         <div class="block3"> 280-005</div>
@@ -69,8 +102,8 @@
         <div class="block8"> 12.12.2004 </div>
         <div class="block9"> г. Хабаровск</div>
         <div class="photo"> <img src="cpm35 2023-07-23 182330.364.jpg" height="150" width="120"/> </div>
-        <h1 id="for_click"> изменить </h1>
-
+        <h1 id="for_click" class="knopka"> изменить </h1>
+        <div class="dom"> <img src="dom.png" width="800"></div>
     </body>
     <script src="./pasp.js"> </script>
 </html>
